TVP-3498 Initial commit for ignite module